@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.160 2002/04/18 00:56:50 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.161 2002/04/18 05:33:50 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-04-18 10:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/rtl/chrasc.c
+  * source/vm/hvm.c
+    * Added missing type cast.
 
 2002-04-17 22:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/rtl/chrasc.c
